--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import 'swiper/swiper-bundle.css';
+
+:root{
+    --primaryColor:#0072C6;
+    --jak:'Plus Jakarta Sans', sans-serif;
+    --footerColor:#6C63FF;
+    --whiteAlt:#F6F6F6;
+    --poppins: 'Poppins', sans-serif;
+    --txtColor: #3F3D56;
+    --headingColor:#0F2B8E;
+    --inter:'Inter', sans-serif;
+}
+
+@font-face {
+    font-family: 'avenir';
+    src: url(assets/avenir_ff/AvenirLTStd-Black.otf) format('opentype');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'avenir';
+    src: url(assets/avenir_ff/AvenirLTStd-Book.otf) format('opentype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'avenir';
+    src: url(assets/avenir_ff/AvenirLTStd-Roman.otf) format('opentype');
+    font-weight: 400;
+}
