--- a/src/app/pages/about/meet-broker/meet-broker.component.html
+++ b/src/app/pages/about/meet-broker/meet-broker.component.html
@@ -1,1 +1,19 @@
-<p>meet-broker works!</p>
+<div class="contain h-[80vh]">
+
+<h3 class="mb-5 mt-16">Meet The Broker</h3>
+
+<div class="flex flex-col lg:flex-row gap-5">
+
+    <img src="assets/mrAlfredImg.png" class="w-[210px] h-[210px] mt-5" alt="Alfred Ijimakinwa Img">
+
+<p class="pb-[60px]"> <span> Alfred Ijimakinwa </span> is a renowned business strategist with 
+    over a decade and half experience. He is the Founder of 
+    BusinessIQ Africa, Africa’s #1 business resource for 
+    entrepreneurs in Africa and Africans in diaspora, and has 
+    helped over a thousand entrepreneurs launch successful 
+    businesses. He is a business consultant, marketing expert 
+    and real estate investors. His passion and goal is to break 
+    the record of selling a property in less than 24 hours.</p>
+
+</div>    
+</div>
