--- a/src/app/pages/about/team/team.component.html
+++ b/src/app/pages/about/team/team.component.html
@@ -1,1 +1,3 @@
-<p>team works!</p>
+<img src="assets/mrAlfredImg.png" alt="mrAlfredImg">
+<img src="assets/MajekodunmiImg.png" alt="majekondunmiImg">
+<img src="assets/chioma1Img.png" alt="chiomaImg">
