--- a/src/app/pages/about/vision-mission/vision-mission.component.html
+++ b/src/app/pages/about/vision-mission/vision-mission.component.html
@@ -1,1 +1,23 @@
-<p>vision-mission works!</p>
+<div class="mb-5 mt-7">
+<h3>Our Mission</h3>
+
+<p>To sell our clients' properties in 60 days or less!</p>
+</div>
+
+<div class="mb-5 mt-7">
+<h3>Our Vision</h3>
+
+<p>To be a major player in the real estate industry in Nigeria and Africa at large.</p>
+</div>
+
+<div class="mb-5 mt-7">
+<h3>Core Values</h3>
+
+<p>Integrity | Commitment | Transparency</p>
+</div>
+
+<div class="mb-5 mt-7">
+<h3>Our Mantra</h3>
+
+<p>Everyone deserves a piece of paradise</p>
+</div>
