--- a/src/app/pages/about/who-we-are/who-we-are.component.html
+++ b/src/app/pages/about/who-we-are/who-we-are.component.html
@@ -1,1 +1,16 @@
-<p>who-we-are works!</p>
+<h2>Who We Are</h2>
+
+<p>Blue Earth Properties is a registered credible and trusted 
+    real estate marketing and brokerage firm. We focus on 
+    helping our clients sell their properties in 60 days or 
+    less! We partner with property owners and credible real 
+    estate developers, locally and international. On behalf 
+    of our clients, we inspect the properties they want to sell,
+     carry out due diligence, check the necessary documentations,
+      agree on a premium price and then leverage on our marketing
+       blitz to sell the properties in 60 days or less. We understand that selling 
+       properties can be a daunting task and property owners face several 
+       challenges with unprofessional agents when it comes to selling their properties. 
+       With our team of experts, professionalism and cutting-edge unique marketing techniques 
+       you are sure of selling your property faster than you think! The beautiful part is that 
+       we will work hand in hand through the entire process.</p>
