--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,10 +1,11 @@
 <nav class="sticky top-0 w-full shadow-md text-white py-[0.45rem]">
     <div class="w-[87%] mx-auto flex justify-between items-center">
-       <img src="assets/logoOne.png" alt="companyLogo" routerLink="/sell"> 
+       <img src="assets/logoOne.png" alt="companyLogo" routerLink=""> 
         <ul class="flex space-x-3">
             <li class="p-2"><a routerLink="/about">About</a></li>
             <li class="p-2"><a routerLink="">Listings</a></li>
             <li class="p-2"><a routerLink="/sell">Sell</a></li>
+            <li class="p-2"><a routerLink="/invest">Invest</a></li>
             <li class="p-2"><a routerLink="">Resources</a></li>
             <li class="p-2"><a routerLink="/contact">Contact</a></li>
         </ul>
