changes made to sell page

--- a/src/app/pages/sell/sell.component.html
+++ b/src/app/pages/sell/sell.component.html
@@ -1,1 +1,17 @@
 <app-nav></app-nav>
+
+<div class="container mx-auto">
+    <div class="flex">
+<div class="py-16">
+    <h3 class="w-[80%]">“We Focus on Helping Clients sell Property within 60 days or less.”</h3>
+    <p>Oma Daniel</p>
+    <p>Property Consierge  at Blue Earth Properties </p>
+    <button>Get Started</button>
+</div>
+    
+
+<iframe width="555" height="312" src="https://www.youtube.com/embed/0alQNxvhQHI" title="September 12, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+</div>
+
+<app-footer></app-footer>
