components & module updated

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -6,7 +6,7 @@
             <li class="p-2"><a routerLink="">Listings</a></li>
             <li class="p-2"><a routerLink="/sell">Sell</a></li>
             <li class="p-2"><a routerLink="/invest">Invest</a></li>
-            <li class="p-2"><a routerLink="">Resources</a></li>
+            <li class="p-2"><a routerLink="">Blog</a></li>
             <li class="p-2"><a routerLink="/contact">Contact</a></li>
         </ul>
 
