--- a/src/app/pages/sell/sell.component.html
+++ b/src/app/pages/sell/sell.component.html
@@ -1,17 +1,94 @@
 <app-nav></app-nav>
 
-<div class="container mx-auto">
-    <div class="flex">
+<div class="w-[85%] mx-auto">
+    <div class="flex items-center h-[80vh]">
 <div class="py-16">
     <h3 class="w-[80%]">“We Focus on Helping Clients sell Property within 60 days or less.”</h3>
-    <p>Oma Daniel</p>
-    <p>Property Consierge  at Blue Earth Properties </p>
-    <button>Get Started</button>
+    <p class="name">Oma Daniel</p>
+    <p class="italic description">Property Consierge at Blue Earth Properties </p>
+    <button class="p-2 px-4 my-5 text-white bg-[#0072C6] rounded hover:bg-[#289416] transition-all">Get Started</button>
 </div>
     
 
-<iframe width="555" height="312" src="https://www.youtube.com/embed/0alQNxvhQHI" title="September 12, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="680" class="mt-10"  height="250" src="https://www.youtube.com/embed/0alQNxvhQHI" title="September 12, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
+
+<h3 class="text-center my-6 sellHead">Want Your Property Sold Within 60 Days? Here’s How.</h3>
+
+<div class="flex justify-center mb-24">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 py-3">
+        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+            <p class="cardNumber tag ">01</p>
+            <p class="cardTitle tag ms-3">INITIAL CONSULTATION</p>
+           <p class="tag cardParagraph ms-3 w-[92%] mb-12">  Our journey begins with a conversation. We will 
+           sit with you to discuss your goals, timeline, and
+           any specific need you have. This will help us to 
+           create a customized strategy for your property.</p>
+        </div>
+        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+            <p class="cardNumber tag ms-3">02</p>
+            <p class="cardTitle tag ms-3">PROPERTY ASSESSMENT 
+                AND PREPARATION</p>
+           <p class="tag cardParagraph mb-12 ms-3 w-[92%]">  Our team of experts will visit your property to 
+            assess its condition and identify any necessary
+             improvement to maximize its appeal. We can also 
+            connect you with trusted contractors to handle 
+            these upgrades if required.</p>
+        </div>
+        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+            <p class="cardNumber tag">03</p>
+            <p class="cardTitle tag ms-3">STRATEGIC PRICING</p>
+           <p class="tag cardParagraph w-[92%] mb-12 ms-3"> We will conduct a thorough market analysis to 
+            determine the optimum pricing strategy for your 
+            property. Our goal is to find the sweet spot that 
+            attract buyers while ensuring you get the best value.</p>
+        </div>
+        
+        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+            <p class="cardNumber tag">04</p>
+            
+            <p class="cardTitle tag ms-3">MARKETING BLITZ</p>
+           <p class="tag cardParagraph w-[92%] mb-12 ms-3">  This is where our marketing magic begins. We will 
+            create stunning visuals, including professional 
+            photos and virtual tours to showcase your
+             property. Your listing will be featured on popular
+             real estate websites, and we will launch targeted 
+            social media and traditional campaigns to reach
+             potential buyers.</p>
+        </div>
+        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+            <p class="cardNumber tag">05</p>
+            <p class="cardTitle tag ms-3">SHOWINGS AND OPEN 
+                HOUSES</p>
+           <p class="tag cardParagraph w-[92%] mb-12 ms-3">  Our team will coordinate showing and open houses 
+            to give buyers the opportunity to experience your
+             property in person. we will handle the logistics to 
+            ensure a smooth process.</p>
+        </div>
+        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+            <p class="cardNumber tag">06</p>
+            <p class="cardTitle tag ms-3">CLOSING THE DEAL</p>
+           <p class="tag cardParagraph w-[92%] mb-12 ms-3">  Once we have accepted the offer, our team will 
+            guide you through the closing process, ensuring  all
+             the necessary document are in order. We will be
+             there every step of the way until the keys are 
+            handed to the new owner.</p>
+        </div>
+    </div>
 </div>
+
+
+
+</div>
+
+<section class="h-[45vh] flex items-center bg-black">
+    <div class="w-[90%] mx-auto">
+    <h4>Contact Us</h4>
+    <div class="flex items-center">
+    <p class="contactParagraph">If you have further enquires or you would like to book a free consultation contact us</p>
+    <a routerLink="/contact" class="text-black ms-32 text-lg rounded font-['poppins'] bg-white p-3">Contact Us</a>
+    </div>  
+    </div>
+</section>
 
 <app-footer></app-footer>
