--- a/src/app/pages/sell/sell.component.css
+++ b/src/app/pages/sell/sell.component.css
@@ -3,7 +3,78 @@ h3,p{
 }
 
 h3{
-    font-size: 36px;
+    font-size: 44px;
     font-family: var(--inter);
     font-weight: 600;
+}
+
+div > button{
+    font-size: 16px;
+    font-family: var(--poppins);
+    font-weight: 400;
+}
+
+.name{
+    font-family: var(--poppins);
+}
+
+.description{
+    font-family: var(--inter);
+    font-weight: 500;
+}
+
+.cardNumber{
+    font-weight: 500;
+    font-size: 128px;
+    font-family: var(--poppins);
+    color: var(--txtColor);         /* Set text color to black */
+    background-color: white; /* Set background color to white */      /* Add padding for better visibility */
+    -webkit-background-clip: text; /* Clip background to the text */
+    background-clip: text; /* Clip background to the text */
+    color: transparent;   /* Make text transparent to reveal background */
+    -webkit-text-stroke: 2px var(--txtColor);
+    margin-left: 10px;
+}
+
+.card:hover .tag{
+    color: white;
+}
+
+.contactParagraph{
+    color: white !important;
+    font-family: var(--inter);
+    font-weight: 400;
+    font-size: 21px;
+    width: 70%;
+}
+
+section div>h4{
+    color: white !important;
+    font-family: var(--inter);
+    font-weight: 600;
+    font-size: 50px;
+}
+
+.special{
+    font-size: 100px;      /* Set font size */
+    color: black;         /* Set text color to black */
+    background-color: white; /* Set background color to white */      /* Add padding for better visibility */
+    -webkit-background-clip: text; /* Clip background to the text */
+    background-clip: text; /* Clip background to the text */
+    color: transparent;   /* Make text transparent to reveal background */
+    -webkit-text-stroke: 1px black; /* Add black stroke to text */
+    /* text-stroke: 2px black; Add black stroke to text */
+    display: inline-block; 
+}
+
+.cardTitle{
+    font-weight: 600;
+    font-family: var(--poppins);
+    font-size: 23px;
+}
+
+.sellHead{
+    font-size: 50px;
+    font-family: 'avenir',sans-serif;
+    color: #374370;
 }
