--- a/src/app/pages/about/vision-mission/vision-mission.component.html
+++ b/src/app/pages/about/vision-mission/vision-mission.component.html
@@ -1,4 +1,4 @@
-<div class="mb-5 mt-7">
+<div class="mb-5 mt-7 lg:mt-16">
 <h3>Our Mission</h3>
 
 <p>To sell our clients' properties in 60 days or less!</p>
@@ -21,3 +21,21 @@
 
 <p>Everyone deserves a piece of paradise</p>
 </div>
+
+<div class="flex justify-between mt-3 mb-9">
+
+<div routerLink="/about/who-we-are" class="justify-end  mr-4 mt-5 flex items-center lg:hidden"> 
+    <span class="material-symbols-outlined text-[#0F2B8E] hover:font-semibold">
+        navigate_before
+        </span>    
+        <a routerLink="/about/who-we-are"  class="text-[#0F2B8E] hover:font-semibold">Who We Are</a>
+    </div>
+
+<div routerLink="/about/meet-broker" class="justify-end  mr-4 mt-5 flex items-center lg:hidden">
+    <a routerLink="/about/meet-broker"  class="text-[#0F2B8E] hover:font-semibold">Meet the Senior Broker</a> 
+    <span routerLink="/about/meet-broker" class="material-symbols-outlined text-[#0F2B8E] cursor-pointer">
+        navigate_next
+        </span>    
+    </div>
+
+</div> 
