--- a/src/app/pages/about/who-we-are/who-we-are.component.html
+++ b/src/app/pages/about/who-we-are/who-we-are.component.html
@@ -14,3 +14,10 @@
        With our team of experts, professionalism and cutting-edge unique marketing techniques 
        you are sure of selling your property faster than you think! The beautiful part is that 
        we will work hand in hand through the entire process.</p>
+
+    <div routerLink="/about/vision-mission" class="justify-end  mr-4 mt-5 flex items-center lg:hidden">
+    <a routerLink="/about/vision-mission"  class="text-[#0F2B8E] hover:font-semibold">Our Vision and Mission</a> 
+    <span routerLink="/about/vision-mission" class="material-symbols-outlined text-[#0F2B8E] cursor-pointer">
+        navigate_next
+        </span>    
+    </div>
