--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,29 @@
+<h1 class="hidden">Blue Earth Properties</h1>
 <nav class="sticky top-0 w-full shadow-md text-white py-[0.45rem]" [ngClass]="{'transparent': !isScrolled , 'colored': isScrolled}">
-    <div class="w-[87%] mx-auto flex justify-between items-center">
+    <div class="w-[87%] mx-auto flex space-y-2 justify-between items-center">
        <img src="assets/logoOne.png" alt="companyLogo" class="logoImg" routerLink="/sell"> 
-        <ul class="flex space-x-3">
+        <ul class="hidden md:flex space-x-3">
             <li class="p-2"><a routerLink="/about">About</a></li>
-            <li class="p-2"><a routerLink="">Listings</a></li>
+            <li class="p-2"><a routerLink="/listings">Listings</a></li>
             <li class="p-2"><a routerLink="/sell">Sell</a></li>
-            <li class="p-2"><a routerLink="/sell">Invest</a></li>
-            <li class="p-2"><a routerLink="">Blog</a></li>
-            <li class="p-2"><a routerLink="/contact">Contact</a></li>
+            <li class="p-2"><a routerLink="/invest">Invest</a></li>
+            <li class="p-2"><a routerLink="/blog">Blog</a></li>
         </ul>
 
-        <button class="border border-white rounded mt-[0.1rem] hover:bg-white py-1 px-5 transition-all hover:font-medium">
-            Register
+        <button routerLink="/contact" class="hidden md:block border border-white rounded mt-[0.1rem] hover:bg-white py-2 px-3 transition-all hover:font-medium">
+            Contact Us
         </button>
+
+        <div class="block md:hidden cursor-pointer">
+            <i class="fa-solid fa-bars text-xl mx-5 cursor-pointer" sidebarjsToggle></i>
+           </div>
     </div>
 </nav>
+
+<sidebarjs-element>
+    Hello!
+  </sidebarjs-element>
+  
 
     <swiper-container>
         <swiper-wrapper>
