--- a/src/app/pages/sell/sell.component.html
+++ b/src/app/pages/sell/sell.component.html
@@ -1,16 +1,21 @@
 <app-nav></app-nav>
 
 <div class="w-[85%] mx-auto">
-    <div class="flex items-center h-[80vh]">
-<div class="py-16">
-    <h3 class="w-[80%]">“We Focus on Helping Clients sell Property within 60 days or less.”</h3>
+
+    <div class="flex mt-20 items-center justify-center lg:justify-start">
+    <div class="grid grid-cols-1 lg:grid-cols-3 w-[90%]">
+<div class="py-16 lg:col-span-2">
+    <h3 class="w-full lg:w-[80%]">“We Focus on Helping Clients sell Property within 60 days or less.”</h3>
     <p class="name">Oma Daniel</p>
     <p class="italic description">Property Consierge at Blue Earth Properties </p>
     <button class="p-2 px-4 my-5 text-white bg-[#0072C6] rounded hover:bg-[#289416] transition-all">Get Started</button>
 </div>
     
+<div class="aspect-w-16 aspect-h-9">
+<iframe class="mt-20 mb-20 w-full h-full lg:h-[300px] lg:w-[500px]" src="https://www.youtube.com/embed/0alQNxvhQHI" title="September 12, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 
-<iframe width="680" class="mt-10"  height="250" src="https://www.youtube.com/embed/0alQNxvhQHI" title="September 12, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 </div>
 
 <h3 class="text-center my-6 sellHead">Want Your Property Sold Within 60 Days? Here’s How.</h3>
@@ -83,11 +88,14 @@
 
 <section class="h-[45vh] flex items-center bg-black">
     <div class="w-[90%] mx-auto">
+
+    <div class="flex justify-between items-center">
     <h4>Contact Us</h4>
-    <div class="flex items-center">
+    <a routerLink="/contact" class="hover:bg-[#0072C6] hover:text-white hover:shadow-sm hover:transition-all h-12 text-black text-lg rounded font-['poppins'] bg-white p-3">Contact Us</a>
+    </div>
     <p class="contactParagraph">If you have further enquires or you would like to book a free consultation contact us</p>
-    <a routerLink="/contact" class="text-black ms-32 text-lg rounded font-['poppins'] bg-white p-3">Contact Us</a>
-    </div>  
+    
+    
     </div>
 </section>
 
