--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,9 +2,9 @@
 <footer class="w-full">
     <div class="w-[87%] mx-auto p-4">
    
-        <div class="flex items-center mt-10">
+        <div class="flex justify-center md:justify-start items-center mt-10">
 
-            <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 gap-6">
+            <div class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-7 gap-6">
                 <img src="assets/logoOne.png" alt="companyLogo" class="w-52 col-span-2">
             
                 <div class="mt-10">
