--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,18 +1,27 @@
-<nav class="sticky top-0 w-full shadow-md text-white py-[0.45rem]">
-    <div class="w-[87%] mx-auto flex justify-between items-center">
+<nav class="sticky top-0 w-full shadow-md text-white py-[0.45rem] z-50">
+    <div class="w-[87%] mx-auto flex space-y-2 justify-between items-center">
        <img src="assets/logoOne.png" alt="companyLogo" routerLink=""> 
-        <ul class="flex space-x-3">
+        <ul class="md:flex space-x-3 hidden">
             <li class="p-2"><a routerLink="/about">About</a></li>
-            <li class="p-2"><a routerLink="">Listings</a></li>
+            <li class="p-2"><a routerLink="/listings">Listings</a></li>
             <li class="p-2"><a routerLink="/sell">Sell</a></li>
             <li class="p-2"><a routerLink="/invest">Invest</a></li>
-            <li class="p-2"><a routerLink="">Blog</a></li>
-            <li class="p-2"><a routerLink="/contact">Contact</a></li>
+            <li class="p-2"><a routerLink="/blog">Blog</a></li>
+            
         </ul>
 
-        <button class="border border-white rounded mt-[0.1rem] hover:bg-white py-1 px-5 transition-all hover:font-medium">
-            Register
+        <button routerLink="/contact" class="hidden md:block border border-white rounded mt-[0.1rem] hover:bg-white py-2 px-3 transition-all hover:font-medium">
+            Contact Us
         </button>
+        
+        <div class="block md:hidden">
+            <i class="fa-solid fa-bars text-xl mx-5" sidebarjsToggle></i>
+           </div>
     </div>
 </nav>
 
+
+
+<sidebarjs-element>
+  Hello!
+</sidebarjs-element>
