--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,7 +4,7 @@
 
 <div class="w-[85%] mx-auto gap-12 flex flex-col md:flex-row h-[85vh]">
 
-<nav class="flex flex-col self-center shadow-md">
+<nav class="hidden lg:flex flex-col self-center shadow-md">
 
     <a routerLink='who-we-are' routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Who We Are</a>
     <a routerLink='vision-mission' routerLinkActive="active">Our Vision, Mission and Core Values</a>
@@ -13,12 +13,12 @@
 
 </nav>
 
-<div class="w-[60%]">
+<div class="w-full lg:w-[60%]">
     <router-outlet></router-outlet>
 </div>
 
 </div>
 
-<div class="mt-12">
+<div class="mt-28">
 <app-footer></app-footer>
 </div>
