--- a/src/app/pages/about/meet-broker/meet-broker.component.html
+++ b/src/app/pages/about/meet-broker/meet-broker.component.html
@@ -1,12 +1,12 @@
 <div class="contain h-[80vh]">
 
-<h3 class="mb-5 mt-16">Meet The Broker</h3>
+<h3 class="mb-2 lg:mb-5 mt-4 lg:text-left text-center">Meet The Broker</h3>
 
-<div class="flex flex-col lg:flex-row gap-5">
+<div class="flex flex-col justify-center gap-5">
 
-    <img src="assets/mrAlfredImg.png" class="w-[210px] h-[210px] mt-5" alt="Alfred Ijimakinwa Img">
+    <img src="assets/mrAlfredImg.png" class="self-center lg:self-start w-[450px] h-[360px]  mt-5" alt="Alfred Ijimakinwa Img">
 
-<p class="pb-[60px]"> <span> Alfred Ijimakinwa </span> is a renowned business strategist with 
+<p> <span> Alfred Ijimakinwa </span> is a renowned business strategist with 
     over a decade and half experience. He is the Founder of 
     BusinessIQ Africa, Africa’s #1 business resource for 
     entrepreneurs in Africa and Africans in diaspora, and has 
@@ -15,5 +15,22 @@
     and real estate investors. His passion and goal is to break 
     the record of selling a property in less than 24 hours.</p>
 
-</div>    
+</div>   
+
+<div class="flex justify-between mb-6">
+
+    <div routerLink="/about/vision-mission" class="justify-end  mr-4 mt-5 flex items-center lg:hidden"> 
+        <span class="material-symbols-outlined text-[#0F2B8E] hover:font-semibold">
+            navigate_before
+            </span>    
+            <a routerLink="/about/vision-mission"  class="text-[#0F2B8E] hover:font-semibold">Our Vision and Mission</a>
+        </div>
+    
+    <div routerLink="/about/team" class="justify-end  mr-4 mt-5 flex items-center lg:hidden">
+        <a routerLink="/about/team"  class="text-[#0F2B8E] hover:font-semibold">Team</a> 
+        <span routerLink="/about/team" class="material-symbols-outlined text-[#0F2B8E] cursor-pointer">
+            navigate_next
+            </span>    
+        </div>
+
 </div>
