--- a/src/app/pages/sell/sell.component.css
+++ b/src/app/pages/sell/sell.component.css
@@ -2,6 +2,10 @@ h3,p{
     color: var(--txtColor);
 }
 
+div > h3 {
+    color: var(--primaryColor);
+}
+
 h3{
     font-size: 44px;
     font-family: var(--inter);
