website components generated and updated

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,9 +10,9 @@
                 <div class="mt-10">
                     <div class="flex flex-col text-white">
                         <p class="footerHead">Blue Earth</p>
-                        <p>About Us</p>
-                        <p>Contact Us</p>
-                        <p>Invest</p>
+                        <p routerLink="/about" class="cursor-pointer">About Us</p>
+                        <p routerLink="/contact" class="cursor-pointer">Contact Us</p>
+                        <p routerLink="/invest" class="cursor-pointer">Invest</p>
                     </div>
                     
                 </div>
@@ -20,10 +20,10 @@
                 <div class="mt-10">
                     <div class="flex flex-col text-white">
                         <p class="footerHead">More</p>
-                        <p>Faq</p>
-                        <p>Blog</p>
-                        <p>Magazine</p>
-                        <p>Media</p>
+                        <p class="cursor-pointer">Faq</p>
+                        <p routerLink="/blog" class="cursor-pointer">Blog</p>
+                        <p class="cursor-pointer">Magazine</p>
+                        <p class="cursor-pointer">Media</p>
                     </div>
                     
                 </div>
